fix spacing

--- a/src/components/molecules/breakEvenGraph/breakEvenGraph.less
+++ b/src/components/molecules/breakEvenGraph/breakEvenGraph.less
@@ -45,12 +45,12 @@ card.breakEvenPointLabel {
   position: absolute;
   text-align: center;
   box-shadow: 0 2px 8px 1px rgba(0,0,0,0.12);
-  height: 6vw;
+  height: 6.5vw;
   width: 8vw;
 
   div.units {
     color: @secondary-blue;
     font-size: 2vw;
-    margin-bottom:5px;
+    margin-bottom:0.5vw;
   }
 }
